# STREMO

./: .env.example  .gitignore  LICENSE  Readme.md
backend/: CMakeLists.txt  Cargo.toml
backend/libs/rust-core/: Cargo.toml
backend/libs/rust-core/src/: errors.rs
backend/proto/: auth.proto  errors.proto  stream_meta.proto
backend/service/analytics-service/: .dockerignore  Cargo.toml  Dockerfile  build.rs
backend/service/analytics-service/src/: config.rs  lib.rs  main.rs
backend/service/analytics-service/src/api/: grpc_server.rs
backend/service/analytics-service/src/models/: domain.rs  dto.rs  events.rs
backend/service/analytics-service/src/repository/: clickhouse.rs  db.rs  redis.rs
backend/service/analytics-service/src/service/: aggregator.rs  logic.rs  manager.rs  mod.rs  validator.rs
backend/service/auth-service/: CMakeLists.txt  Dockerfile
backend/service/auth-service/include/models/: domain.h  domain_types.h  dto.h
backend/service/auth-service/include/service/: validator.h
backend/service/auth-service/src/: __init__.py  main.py
backend/service/auth-service/src/api/: __init__.py
backend/service/auth-service/src/core/: __init__.py  config.py  exceptions.py  security.py
backend/service/auth-service/src/domain/: __init__.py  entities.py
backend/service/auth-service/src/infrastructure/: __init__.py
backend/service/auth-service/src/models/: domain.cpp  domain_types.cpp  dto.cpp
backend/service/auth-service/src/repositories/: __init__.py
backend/service/auth-service/src/schemes/: __init__.py  dto.py
backend/service/auth-service/src/service/: validator.cpp
backend/service/auth-service/src/services/: __init__.py  auth.py  validators.py
backend/service/auth-service/tests/: conftest.py  integration.py  unit.py
backend/service/bff_service/: Cargo.toml  Dockerfile  build.rs
backend/service/bff_service/src/: config.rs  main.rs
backend/service/bff_service/src/grpc_clients/: auth_client.rs  mod.rs  stream_meta_client.rs
backend/service/bff_service/src/middleware/: jwt_auth.rs  mod.rs  rate_limiter.rs
backend/service/bff_service/src/models/: requests.rs  responses.rs
backend/service/bff_service/src/tests/: config_tests.rs  error_tests.rs  jwt_tests.rs  mod.rs  model_tests.rs
backend/service/bff_service/src/utils/: errors.rs  state.rs
backend/service/chat-service/: Cargo.toml  build.rs
backend/service/chat-service/src/: main.rs
backend/service/chat-service/src/api/: ws.rs
backend/service/chat-service/src/infrastructure/: grpc_client.rs
backend/service/chat-service/src/models/: domain.rs  dto.rs
backend/service/chat-service/src/repository/: mod.rs  postgres.rs  redis_pubsub.rs
backend/service/chat-service/src/service/: manager.rs
backend/service/ingest-service/: Cargo.toml  Dockerfile
backend/service/ingest-service/src/: config.rs  main.rs
backend/service/ingest-service/src/api/: mod.rs  tcp_rtmp.rs
backend/service/ingest-service/src/errors/: custom.rs
backend/service/ingest-service/src/infrastructure/: ffmpeg.rs  grpc_client.rs  logger.rs  mod.rs
backend/service/ingest-service/src/models/: domain.rs  dto.rs  events.rs  mod.rs
backend/service/ingest-service/src/repository/: db.rs  mod.rs
backend/service/ingest-service/src/service/: logic.rs  manager.rs  mod.rs  validator.rs
backend/service/ingest-service/src/utils/: crypto.rs
backend/service/ml-spam-filter/: Dockerfile  pyproject.toml
backend/service/ml-spam-filter/app/: main.py
backend/service/ml-spam-filter/app/api/: routes.py
backend/service/ml-spam-filter/app/core/: config.py
backend/service/ml-spam-filter/app/models/: schemas.py
backend/service/ml-spam-filter/app/services/: classifier.py
backend/service/moderation-service/: Cargo.toml  build.rs
backend/service/moderation-service/src/: main.rs
backend/service/moderation-service/src/api/: grpc_server.rs
backend/service/moderation-service/src/infrastructure/: kafka_producer.rs  mod.rs  redis_publisher.rs
backend/service/moderation-service/src/repository/: postgres.rs
backend/service/moderation-service/src/service/: moderator.rs
backend/service/notification-service/: .dockerignore  CMakeLists.txt  Dockerfile
backend/service/notification-service/src/: Config.hpp  NotificationService.cpp  NotificationService.hpp  main.cpp
backend/service/smtp-service/: Dockerfile  go.mod  go.sum
backend/service/smtp-service/cmd/server/: main.go
backend/service/smtp-service/internal/config/: config.go
backend/service/smtp-service/internal/handlers/: smtp.go
backend/service/smtp-service/internal/models/: email.go
backend/service/smtp-service/internal/repository/: redis_queue.go
backend/service/smtp-service/internal/routers/: router.go
backend/service/smtp-service/internal/service/: smtp_service.go
backend/service/smtp-service/templates/: welcome.html
backend/service/stream-meta-service/: Dockerfile  go.mod  go.sum
backend/service/stream-meta-service/cmd/server/: main.go
backend/service/stream-meta-service/internal/config/: config.go
backend/service/stream-meta-service/internal/handlers/: meta.go
backend/service/stream-meta-service/internal/middleware/: jwt.go
backend/service/stream-meta-service/internal/models/: meta.go
backend/service/stream-meta-service/internal/repository/: postgres.go  redis.go
backend/service/stream-meta-service/internal/routers/: router.go
backend/service/stream-meta-service/internal/service/: meta_service.go
backend/service/transcoder-service/: Cargo.toml
backend/service/transcoder-service/src/: config.rs  main.rs
backend/service/transcoder-service/src/infrastructure/: ffmpeg.rs  mod.rs  webhook.rs
backend/service/user-profile-service/: Dockerfile  go.mod  go.sum
backend/service/user-profile-service/cmd/server/: main.go
backend/service/user-profile-service/internal/config/: config.go
backend/service/user-profile-service/internal/handlers/: profile.go
backend/service/user-profile-service/internal/middleware/: jwt.go
backend/service/vod-manager-service/: Dockerfile  go.mod  go.sum
docs/: API.md  Archicture.md  CI-CD.md  (+4 more)
(+104 files in other folders)
