[package]
name = "rust-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# как нить потом надо убрать комменты :(
# tokio = { version = "1", features = ["full"] }
# serde = { version = "1", features = ["derive"] }
# sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid"] }
