[package]
name = "analytics-service"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = {version = "1.36", features = ["full"]}
futures = "0.3"

axum = {version = "0.7", features = ["ws", "macros"]}
tower = "0.4"
tower-http = {version = "0.5", features = ["trace", "cors"]}

tonic = "0.11"
prost = "0.12"
prost-types = "0.12"

clickhouse = {version = "0.11", features = ["time","uuid"]}
redis = {version = "0.25", features = ["tokio-comp", "connection-manager"]}
bb8 = "0.8"
bb8-redis = "0.15"

rdkafka = {"version" = "0.36", "features" = ["cmake-build","ssl"]}

serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0", features = []}
uuid = {version = "1.8", features = ["v4", "serde"]}
chrono = {version = "0.4", features = ["serde"]}

anyhow = "1.0"
thiserror = "1.0"

tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "json"]}
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
validator = { version = "0.16", features = ["derive"] }
config = "0.14"


[build-dependencies]
tonic-build = "0.11"
