[package]
name = "chat-service"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-core = { path = "../../libs/rust-core" }
tokio = { version = "1.37", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tonic = "0.11"
prost = "0.12"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tokio-stream = "0.1"
jsonwebtoken = "9.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = { version = "0.25", features = ["tokio-comp"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }

[build-dependencies]
tonic-build = "0.11"
