[package]
name = "ingest-service"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-core = { path = "../../libs/rust-core" }
tokio = { version = "1.37", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tonic = "0.11"
prost = "0.12"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
bytes = "1.5"
uuid = { version = "1.8", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio-stream = "0.1"
rdkafka = { version = "0.36", features = ["cmake-build"] }
axum = "0.7.9"
prometheus = "0.14.0"
lazy_static = "1.5.0"
async-trait = "0.1"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
deadpool-postgres = "0.14"
redis = { version = "0.25", features = ["tokio-comp"] }
clickhouse = "0.11"

[build-dependencies]
tonic-build = "0.11"
