[tool.poetry]
name = "stremo-ml-spam-filter"
version = "2.0.0"
description = "Machine Learning spam and toxicity classifier for STREMO chat"
authors = ["STREMO Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
uvicorn = "0.29.0"
pydantic = "2.7.1"
pydantic-settings = "2.2.1"
transformers = "4.40.1"
torch = "2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
