[package]
name = "transcoder-service"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-core = { path = "../../libs/rust-core" }
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
